2003-02-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* api/gdk-api.xml:
	* sources/Gdk.metadata: hide GdkColormap.AllocColor.

	* gdk/Colormap.custom: AllocColor is here.

	* gconf/tools/schemagen.cs: XmlDocument.Load (string) takes an Uri.

2003-02-28  Miguel de Icaza  <miguel@ximian.com>

	* gdk/Color.custom: Added constructors from System.Drawing.Color
	and from rgb byte tuples. 

	* gdk/Colormap.custom: Add new .custom file for the AllocColor
	call. 

	* sources/Gdk.metadata: Make Colormap.AllocColor GdkColor
	parameter be a `ref' parameter.

2003-02-27  Miguel de Icaza  <miguel@ximian.com>

	* gdk/Drawable.custom: Added nice overload for DrawRectangle. 

2003-02-19  Miguel de Icaza  <miguel@ximian.com>

	* gdk/Pixbuf.custom: Add overload arguments that take a
	System.Drawing.Color.

	Added a Clone() method, to implement the ICloneable interface.

	Added constructors for inlined in-data RGB/RGBA buffers and file
	images. 

2003-02-26  Charles Iliya Krempeaux  <charles@reptile.ca>

 	* gtk/TextBuffer.custom : Added method, named
 	  "GetIterAtOffset" to wrap C API procedure
 	  "gtk_text_buffer_get_iter_at_offset" in a
 	  more expected way.
 
2003-02-26  Charles Iliya Krempeaux <charles@reptile.ca>

 	* configure.in : Added support for Rsvg.NET -- librsvg
 	  .NET bindings.  (Made a check for the library.  And
 	  made it so "rsvg/Makefile" would be generated.  Also
 	  made it so it will display if rsvg-sharp.dll will
 	  be generated or not.)
 	* makefile :  Added support for Rsvg.NET -- librsvg
           .NET bindings.  (Added an entry for Rsvg.NET.)
        * sources/gtk-sharp.sources : Added an entry for
 	  Rsvg.NET -- librsvg .NET bindings.
        * rsvg/ : Created "rsvg/" directory.  (To hold stuff
 	  for Rsvg.NET.)
        * rsvg/Tool.cs : Created Rsvg.Tool class to hold
 	  various procedures (which were not automatically
 	  wrapped).
 	* rsvg/Makefile.in : Created "rsvg/Makefile.in".
 	* api/Makefile.in : Added and entry for Rsvg.NET.
 