@@ -1,5 +1,11 @@
 2003-02-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
+	* generator/SignalHandler.cs: the generated Dispose method now calls
+	base.Dispose and always disconnects the handler. Thanks to
+	Petr Danecek <danecek@ucl.cas.cz>.
+
+2003-02-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
 	* api/gdk-api.xml:
 	* sources/Gdk.metadata: hide GdkColormap.AllocColor.
 
